Refactored InputObserver, it now inherits from Output. Created a RoundRobin output class Created an OutputCollection class

--- a/openPerformanceArt.vcproj
+++ b/openPerformanceArt.vcproj
@@ -287,11 +287,27 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\outputcollection.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\outputcollection.h"
+				>
+			</File>
+			<File
 				RelativePath=".\src\rectangleoutput.cpp"
 				>
 			</File>
 			<File
 				RelativePath=".\src\rectangleoutput.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\roundrobin.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\roundrobin.h"
 				>
 			</File>
 			<File
